--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.6.0",
     "dotenv": "^17.2.3",
     "firebase": "^12.3.0",
     "next": "15.5.4",
